--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
 
+    <string name="placeholder">placeholder</string>
+
     <string name="app_name">DiceRoller</string>
     <string name="title_section3">Section 3</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section1">Section 1</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="roll">Roll!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Dice Roller</string>
 
