--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="central_title">Central</string>
     <string name="chooser_title">Chooser</string>
     <string name="roll">Roll!</string>
+    <string name="edit">Edit</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Dice Roller</string>
 
