--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="edit">Edit</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Dice Roller</string>
+    <string name="empty_selection">No Dice!</string>
 
 </resources>
