--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="empty_selection">No Dice!</string>
     <string name="last_roll">Last Roll</string>
     <string name="all_rolls">All Rolls</string>
+    <string name="no_statistics">No Statistics</string>
 
 </resources>
