Added num rolls and avg of rolls as per req 3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="add_dice_cancel">Cancel</string>
     <string name="delete">Delete</string>
     <string name="title_editor">Set Editor</string>
+    <string name="num_rolls_label">Rolls:</string>
+    <string name="avg_rolls_label">AVG:</string>
 
 </resources>
