Added second screen for extra statistics

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="title_editor">Set Editor</string>
     <string name="num_rolls_label">Rolls:</string>
     <string name="avg_rolls_label">AVG:</string>
+    <string name="rolls">Rolls</string>
+    <string name="stats">Statistics</string>
 
 </resources>
